--- a/index.html
+++ b/index.html
@@ -53,19 +53,41 @@
                 <ul>
                     <li>
                         <a href="">
-                            <span class="las la-balance-scale"></span>
-                            Finance
+                            <span class="las la-calender"></span>
+                            Calender
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <span class="las la-chart-pie"></span>
-                            Analytics
+                            <span class="las la-users"></span>
+                            Contacts
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="las la-shopping-cart"></span>
+                            Ecommerce
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="las la-envelope"></span>
+                            Mailbox
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="las la-check-circle"></span>
+                            Tasks
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
+    </div>
+
+    <div class="main content">
+        
     </div>
 </body>
 </html> 
